--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,29 +3,15 @@
   <form (ngSubmit)="onLogin()" #loginForm="ngForm">
     <div>
       <label for="username">Usuario:</label>
-      <input
-        type="text"
-        id="username"
-        name="username"
-        [(ngModel)]="username"
-        required
-      />
+      <input type="text" id="username" [(ngModel)]="username" name="username" required />
     </div>
     <div>
       <label for="password">Contraseña:</label>
-      <input
-        type="password"
-        id="password"
-        name="password"
-        [(ngModel)]="password"
-        required
-      />
+      <input type="password" id="password" [(ngModel)]="password" name="password" required />
     </div>
-    <button type="submit" [disabled]="!loginForm.form.valid">
-      Ingresar
-    </button>
-    <p *ngIf="loginMessage" [style.color]="isError ? 'red' : 'green'">
-      {{ loginMessage }}
-    </p>
+    <div>
+      <button type="submit" [disabled]="!loginForm.form.valid">Iniciar sesión</button>
+    </div>
+    <p *ngIf="errorMessage" class="error">{{ errorMessage }}</p>
   </form>
 </div>
