--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="dashboard">
   <h2>Bienvenido</h2>
-  <button (click)="navigateTo('mago')">Mago</button>
-  <button (click)="navigateTo('hechizo')">Hechizo</button>
-  <button (click)="navigateTo('criatura')">Criatura Mágica</button>
+  <button (click)="navigateTo('wizards')">Mago</button>
+  <button (click)="navigateTo('spells')">Hechizo</button>
+  <button (click)="navigateTo('magical-creatures')">Criatura Mágica</button>
 </div>
